--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
 </head>
 <body>
 <header>
-    <h1>Книги</h1>
+    <h1>Книжный магазин "Мир Грёз"</h1>
+    <nav>
+        <ul>
+            <li><a href="SignUp.html" target="_self">Регистрация</a> </li>
+            <li><a href="LogIn.html" target="_self">Авторизация</a></li>
+            <li><a href="Catalog.html" target="_self">Каталог книг</a></li>
+        </ul>
+    </nav>
 </header>
 <main>
-<a href="SignUp.html" target="_self">Регистрация</a>
-<br>
-<br>
-<a href="LogIn.html" target="_self">Авторизация</a>
-<br>
-<br>
+    <figure>
+        <img src="../Project/Images/Книги.jpg" alt="books">
+        <figcaption>Добро пожаловать на наш небольшой веб-сайт по продаже книг! Уверен, что вы найдете здесь то, что вам нужно!</figcaption>
+    </figure>
 </main>
 <footer>
-    <h6>Номер телефона: +375 (25) 561 98 32 </h6>
-    <h6>Электронная почта: prodavecknig@mail.ru</h6>
+    <h5>Номер телефона: +375 (25) 561 98 32 </h5>
+    <h5>Электронная почта: mirgrez@mail.ru</h5>
 </footer>
 </body>
 </html>
