--- a/Catalog.html
+++ b/Catalog.html
@@ -3,44 +3,52 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
+    <meta name="description" content="Онлайн магазин по продаже книг">
+    <meta name="author" content="Санцевич Денис">
+    <link rel="stylesheet" href="Catalog.css">
     <title>Каталог товаров</title>
 </head>
 <body>
 <header>
     <h1>Каталог книг</h1>
     <nav>
-        <a href="index.html">На главную страницу</a>
+        <ul class="main-nav">
+            <li><a href="SignUp.html" target="_self" class="nav-link">Регистрация</a> </li>
+            <li><a href="LogIn.html" target="_self">Авторизация</a></li>
+            <li><a href="index.html" target="_self">Главная страница</a></li>
+        </ul>
     </nav>
 </header>
 
 <main>
-    <div>
         <div>
             <figure>
-                <img src="Images/Властелин%20колец.jpg" alt="Lord of the Rings" width="20%">
+                <img src="Images/Властелин%20колец.jpg" alt="Lord of the Rings">
                 <figcaption>Властелин колец</figcaption>
             </figure>
         </div>
         <div>
             <figure>
-                <img src="Images/Бесы.jpg" alt="Demons" width="20%">
+                <img src="Images/Бесы.jpg" alt="Demons">
                 <figcaption>Бесы</figcaption>
             </figure>
         </div>
         <div>
             <figure>
-                <img src="Images/Американская%20трагедия.jpeg" alt="American Tragedy" width="20%">
+                <img src="Images/Американская%20трагедия.jpeg" alt="American Tragedy">
                 <figcaption>Американская трагедия</figcaption>
             </figure>
         </div>
         <div>
             <figure>
-                <img src="Images/Белая%20гвардия.jpg" alt="White Guard" width="20%">
+                <img src="Images/Белая%20гвардия.jpg" alt="White Guard">
                 <figcaption>Белая гвардия</figcaption>
             </figure>
         </div>
-    </div>
 </main>
-
+<footer>
+    <address>Номер телефона: +375 (25) 561 98 32 </address>
+    <address>Электронная почта: mirgrez@mail.ru</address>
+</footer>
 </body>
 </html>
