--- a/SignUp.html
+++ b/SignUp.html
@@ -3,6 +3,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
+    <meta name="description" content="Онлайн магазин по продаже книг">
+    <meta name="author" content="Санцевич Денис">
+    <link rel="stylesheet" href="SignUp.css">
     <title>Регистрация</title>
 </head>
 <body>
@@ -10,43 +13,18 @@
     <fieldset>
     <legend>Регистрация</legend>
     <label for="surname">Фамилия</label>
-    <br>
-    <br>
     <input id = "surname" type="text" name="surname" required>
-    <br>
-    <br>
     <label for="name">Имя</label>
-    <br>
-    <br>
     <input id = "name" type="text" name="name" required>
-    <br>
-    <br>
     <label for="patronymic">Отчество</label>
-    <br>
-    <br>
     <input id = "patronymic" type="text" name="patronymic">
-    <br>
-    <br>
     <label for="email">Адрес электронной почты</label>
-    <br>
-    <br>
     <input id = "email" type="email" name="email" required>
-    <br>
-    <br>
     <label for="password">Пароль</label>
-    <br>
-    <br>
     <input id = "password" type="password" name="password" required>
-    <br>
-    <br>
     <label for="date">Дата рождения</label>
-    <br>
-    <br>
     <input id="date" type="date" name="date" required>
-    <br>
-    <br>
     <button>Подтвердить</button>
-     <a href="index.html">На главную страницу</a>
     </fieldset>
 </form>
 </body>
