--- a/index.html
+++ b/index.html
@@ -2,29 +2,30 @@
 <html lang="ru">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Онлайн магазин по продаже книг">
+    <meta name="author" content="Санцевич Денис">
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="index.css">
     <title>Главная страница</title>
 </head>
 <body>
 <header>
     <h1>Книжный магазин "Мир Грёз"</h1>
     <nav>
-        <ul>
-            <li><a href="SignUp.html" target="_self">Регистрация</a> </li>
+        <ul class="main-nav">
+            <li><a href="SignUp.html" target="_self" class="nav-link">Регистрация</a> </li>
             <li><a href="LogIn.html" target="_self">Авторизация</a></li>
             <li><a href="Catalog.html" target="_self">Каталог книг</a></li>
         </ul>
     </nav>
 </header>
 <main>
-    <figure>
-        <img src="../Project/Images/Книги.jpg" alt="books">
-        <figcaption>Добро пожаловать на наш небольшой веб-сайт по продаже книг! Уверен, что вы найдете здесь то, что вам нужно!</figcaption>
-    </figure>
+    <p>Мы организуем вам движение сквозь миры!</p>
+    <p>Добро пожаловать на наш небольшой веб-сайт по продаже книг! Уверен, что вы найдете здесь то, что вам нужно!</p>
 </main>
 <footer>
-    <h5>Номер телефона: +375 (25) 561 98 32 </h5>
-    <h5>Электронная почта: mirgrez@mail.ru</h5>
+    <address>Номер телефона: +375 (25) 561 98 32 </address>
+    <address>Электронная почта: mirgrez@mail.ru</address>
 </footer>
 </body>
 </html>
