--- a/LogIn.html
+++ b/LogIn.html
@@ -3,28 +3,23 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
+    <meta name="description" content="Онлайн магазин по продаже книг">
+    <meta name="author" content="Санцевич Денис">
+    <link rel="stylesheet" href="LogIn.css">
     <title>Авторизация</title>
 </head>
 <body>
+<main>
 <form action="" method="post" autocomplete="on">
     <fieldset>
         <legend>Авторизация</legend>
         <label for="email">Адрес электронной почты</label>
-        <br>
-        <br>
         <input id="email" type="email" name="email" required>
-        <br>
-        <br>
         <label for="password">Пароль</label>
-        <br>
-        <br>
         <input id="password" type="password" name="password" required>
-        <br>
-        <br>
         <button>Подтвердить</button>
-        <a href="index.html">На главную страницу</a>
     </fieldset>
 </form>
-
+</main>
 </body>
 </html>
