--- a/Catalog.html
+++ b/Catalog.html
@@ -10,7 +10,11 @@
 </head>
 <body>
 <header>
-    <h1>Каталог книг</h1>
+    <div id="picture">
+        <figure id="figure_logo">
+            <img id="logo" src="Images/Logo.png" alt="Lord of the Rings">
+        </figure>
+    </div>
     <nav>
         <ul class="main-nav">
             <li><a href="SignUp.html" target="_self" class="nav-link">Регистрация</a> </li>
@@ -19,28 +23,27 @@
         </ul>
     </nav>
 </header>
-
 <main>
         <div>
-            <figure>
+            <figure class="books">
                 <img src="Images/Властелин%20колец.jpg" alt="Lord of the Rings">
                 <figcaption>Властелин колец</figcaption>
             </figure>
         </div>
         <div>
-            <figure>
+            <figure class="books">
                 <img src="Images/Бесы.jpg" alt="Demons">
                 <figcaption>Бесы</figcaption>
             </figure>
         </div>
         <div>
-            <figure>
+            <figure class="books">
                 <img src="Images/Американская%20трагедия.jpeg" alt="American Tragedy">
                 <figcaption>Американская трагедия</figcaption>
             </figure>
         </div>
         <div>
-            <figure>
+            <figure class="books">
                 <img src="Images/Белая%20гвардия.jpg" alt="White Guard">
                 <figcaption>Белая гвардия</figcaption>
             </figure>
