--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
 <header>
-    <h1>Книжный магазин "Мир Грёз"</h1>
+    <div id="picture">
+        <figure>
+            <img src="Images/Logo.png" alt="Lord of the Rings">
+        </figure>
+    </div>
     <nav>
         <ul class="main-nav">
             <li><a href="SignUp.html" target="_self" class="nav-link">Регистрация</a> </li>
@@ -20,7 +24,6 @@
     </nav>
 </header>
 <main>
-    <p>Мы организуем вам движение сквозь миры!</p>
     <p>Добро пожаловать на наш небольшой веб-сайт по продаже книг! Уверен, что вы найдете здесь то, что вам нужно!</p>
 </main>
 <footer>
